Add multiple changes to styles and page content
# Changes to `style.css`

- Added more fallback fonts for all text styles

- Added new variables for color of hovered text

- Changed text size of footer

- Added correct text color to body text

- Added max-width to body text

- Changed color of nav bar, and subsequently text color of nav links

- Changed all letter spacing to 8%

- Made nav links two points smaller

- Added a link to telephone on contact page

- Changed styles of personal page link

- Added 150% line height to disease text

- Changed logo to lower case, and upped font size

# Changes to `index.html`

- Changed the logo svg

- Removed bottom padding from navbar

- Changed color of menu button

- Added class to text on find us page

- Changed the text on contact page

- Removed span with bold class from personal page link

--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
     <body>
         <main id="main-div">
             <div class="navbar-div center-items">
-                <nav class="navbar padding-top-small padding-bottom-small">
+                <nav class="navbar padding-top-medium">
                     <a href="#main-div">
                         <span class="logo">
-                            <img class="margin-right-small" src="assets/vector_graphics/logo.svg" alt="Haugesund Øyelegesenter logo">
+                            <img class="margin-right-small" src="assets/vector_graphics/logo_three.svg" alt="Haugesund Øyelegesenter logo">
                             Haugesund<br>Øyelegesenter
                         </span>
                     </a>
@@ -42,9 +42,9 @@
                         <p><a class="nav-link" href="#diseases-page">Øyesykdommer</a></p>
                     </div>
                     <svg class="menu-icon" onclick="toggleMobileMenu()" width="50" height="50" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M3 12H21" stroke="#F5F6FA" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                        <path d="M3 6H21" stroke="#F5F6FA" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                        <path d="M3 18H21" stroke="#F5F6FA" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                        <path d="M3 12H21" stroke="#232A3A" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                        <path d="M3 6H21" stroke="#232A3A" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                        <path d="M3 18H21" stroke="#232A3A" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                     </svg>
                 </nav>
             </div>
@@ -97,7 +97,7 @@
                         <h1 class="section-heading margin-bottom-medium">Hvor finner du oss?</h1>
                         <span class="heading-accent margin-bottom-medium"></span>
                         <h2 class="section-subheading margin-bottom-large">All infoen du trenger for å finne frem.</h2>
-                        <p class="normal-text margin-top-none margin-bottom-medium">Vi befinner oss midt i sentrum bare få minutter unna Markedet og Rådhuset. Vi hører til i samme bygg som Specsavers, i overetasjen.</p>
+                        <p class="normal-text find-text margin-top-none margin-bottom-medium">Vi befinner oss midt i sentrum bare få minutter unna Markedet og Rådhuset. Vi hører til i samme bygg som Specsavers, i overetasjen.</p>
                         <div class="find-card">
                             <h3 class="find-card-section-heading">Addresse</h3>
                             <p class="find-card-section-info margin-bottom-large">
@@ -183,23 +183,9 @@
                             <h2 class="section-subheading inline">+47 52 70 94 05</h2>
                         </span>
                         <div class="text-box">
-                            <p class="normal-text margin-top-none">
-                                The path of the righteous man is beset on all sides by the iniquities of the selfish
-                                and the tyranny of evil men.
-                                Blessed is he who, in the name of charity and good will,
-                                shepherds the weak through the valley of darkness,
-                                for he is truly his brother's keeper and the finder of lost children.
-                                And I will strike down upon thee with great vengeance and furious anger
-                                those who would attempt to poison and destroy My brothers.
-                                And you will know My name is the Lord when I lay My vengeance upon thee.
-                            </p>
-                            <p class="normal-text margin-bottom-none">
-                                Now that we know who you are, I know who I am.
-                                I'm not a mistake! It all makes sense!
-                                In a comic, you know how you can tell who the arch-villain's going to be?
-                                He's the exact opposite of the hero. And most times they're friends, like you and me!
-                                I should've known way back when... You know why, David? Because of the kids.
-                                They called me Mr Glass.
+                            <p class="normal-text margin-top-none margin-bottom-none">
+                                Hvis du trenger å endre en time, eller har noen andre spørsmål, er det bare å <a class="telephone-link" href=tel:+4752709405>ringe oss</a> via nummeret oppgitt på denne siden. 
+                                Vi har ingen fast telefontid, men svarer vanligvis i løpet av dagen når som helst.
                             </p>
                         </div>
                     </div>
@@ -210,7 +196,7 @@
             </div>
             <footer class="footer">
                 <p class="footer-text">Made with 💛 by
-                    <a class="personal-page-link" href="https://maximilian.netlify.app/" target="_blank" rel="noopener"><span class="bold-text">Maximilian von Stephanides</span></a>
+                    <a class="personal-page-link" href="https://maximilian.netlify.app/" target="_blank" rel="noopener">Maximilian von Stephanides</a>
                 </p>
             </footer>
             <button class="to-top-button hide">Opp til toppen</button>
