Changed header style

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <body>
         <main id="main-div">
-            <div class="navbar-div center-items">
+            <div class="navbar-div center-items margin-bottom-large">
                 <nav class="navbar padding-top-medium">
                     <a href="#main-div">
                         <span class="logo">
@@ -52,7 +52,7 @@
                 <div class="left-side">
                     <h1 class="section-heading title margin-bottom-medium">Haugesund Øyelegesenter</h1>
                     <span class="heading-accent margin-bottom-medium"></span>
-                    <h2 class="section-subheading margin-bottom-very-large">Den beste behandlingen for deg med øyesykdommer.</h2>
+                    <h2 class="section-subheading margin-bottom-large">Den beste behandlingen for deg med øyesykdommer.</h2>
                     <a href="#contact-page"><button class="contact-button" aria-label="Kontakt Haugesund Øyelegesenter">Kontakt oss</button></a>
                 </div>
                 <div class="right-side">
