--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                         <svg class="diseases-graphic-bottom-left" width="55" height="52" viewBox="0 0 55 52" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <circle cx="20" cy="20" r="20" fill="#4AB33F"/>
                             <circle cx="50" cy="47" r="5" fill="#2D4F9F"/>
-                        </svg>    
+                        </svg>
                     </div>
                 </div>
             </div>
@@ -184,7 +184,7 @@
                         </span>
                         <div class="text-box">
                             <p class="normal-text margin-top-none margin-bottom-none">
-                                Hvis du trenger å endre en time, eller har noen andre spørsmål, er det bare å <a class="telephone-link" href=tel:+4752709405>ringe oss</a> via nummeret oppgitt på denne siden. 
+                                Hvis du trenger å endre en time eller har noen andre spørsmål, er det bare å <a class="telephone-link" href=tel:+4752709405>ringe oss</a> via nummeret oppgitt på denne siden. 
                                 Vi har ingen fast telefontid, men svarer vanligvis i løpet av dagen når som helst.
                             </p>
                         </div>
@@ -194,14 +194,28 @@
                     </div>
                 </div>
             </div>
-            <footer class="footer">
-                <p class="footer-text">Made with 💛 by
-                    <a class="personal-page-link" href="https://maximilian.netlify.app/" target="_blank" rel="noopener">Maximilian von Stephanides</a>
-                </p>
-            </footer>
+            <div class="footer-div">
+                <footer class="footer">
+                    <div class="footer-contact-info-div">
+                        <a class="footer-text bold-text footer-link margin-bottom-medium" href=tel:+4752709405>+47 52 70 94 05</a>
+                        <p class="footer-text margin-bottom-small">Haraldsgata 78, 5528 Haugesund</p>
+                        <p class="footer-text margin-bottom-none">08-19 mandag-onsdag</p>
+                    </div>
+                    <p class="footer-text center-text margin-bottom-none">© Haugesund Øyelegesenter 2021</p>
+                    <div class="footer-attribution-wrapper">
+                        <div class="footer-attribution-div">
+                            <p class="footer-text">Made with 💛 by
+                                <a class="footer-link" href="https://maximilian.netlify.app/" target="_blank" rel="noopener">Maximilian von Stephanides</a>
+                            </p>
+                            <p class="footer-text">Informasjon om øyesykdommer fra <a class="footer-link" href="https://www.optera.no/" target="_blank" rel="noopener">Optera Bergen</a></p>
+                        </div>
+                    </div>
+                </footer>
+            </div>
             <button class="to-top-button hide">Opp til toppen</button>
             <a href="#about-page">
-                <svg class="continue-icon" width="34" height="47" viewBox="0 0 34 47" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <svg class="continue-icon" width="34" height="47" viewBox="0 0 34 47" fill="none" xmlns="http://www.w3.org/2000/svg" aria-labelledby="continue-icon-title" role="img">
+                    <title id="continue-icon-title">Fortsett nedover</title>
                     <path class="continue-arrow" d="M3 3L16.6989 17L31 3" stroke-width="7"/>
                     <path class="continue-arrow" d="M3 28L16.6989 42L31 28" stroke-width="7"/>
                 </svg>
