Add phone links to contact page

--- a/index.html
+++ b/index.html
@@ -178,10 +178,12 @@
                     <div class="left-side">
                         <h1 class="section-heading margin-bottom-medium">Kontakt oss</h1>
                         <span class="heading-accent margin-bottom-medium"></span>
-                        <span class="contact-subheading margin-bottom-large">
-                            <img class="margin-right-small" src="assets/icons/phone_icon.svg" alt="Phone icon">
-                            <h2 class="section-subheading inline">+47 52 70 94 05</h2>
-                        </span>
+                        <a href=tel:+4752709405>
+                            <span class="contact-subheading margin-bottom-large">
+                                <img class="margin-right-small" src="assets/icons/phone_icon.svg" alt="Phone icon">
+                                <h2 class="section-subheading inline">+47 52 70 94 05</h2>
+                            </span>
+                        </a>
                         <div class="text-box">
                             <p class="normal-text margin-top-none margin-bottom-none">
                                 Hvis du trenger å endre en time eller har noen andre spørsmål, er det bare å <a class="telephone-link" href=tel:+4752709405>ringe oss</a> via nummeret oppgitt på denne siden. 
