Add alternative illustrations
- Added new alternative illustrations

- Changed the global background color

- Changed the size and style of the main title

- Added some utility styles

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Source+Serif+Pro:wght@700;900&display=swap" rel="stylesheet"> <!-- Source Serif Pro -->
         <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,400;0,600;0,700;1,400&display=swap" rel="stylesheet"> <!-- Source Sans Pro -->
+        <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@900&display=swap" rel="stylesheet">
         <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon_io_hos/apple-touch-icon.png">
         <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon_io_hos/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon_io_hos/favicon-16x16.png">
@@ -72,15 +73,15 @@
                     </svg>
                 </nav>
             </div>
-            <div id="landing-page" class="full-page layout align-start column-gap-small margin-bottom-massive">
-                <div class="left-side">
-                    <h1 class="section-heading title margin-bottom-medium">Haugesund Øyelegesenter</h1>
-                    <span class="heading-accent margin-bottom-medium"></span>
-                    <h2 class="section-subheading margin-bottom-very-large">Den beste behandlingen for deg med øyesykdommer.</h2>
-                    <a href="#contact-page"><button class="contact-button" aria-label="Kontakt Haugesund Øyelegesenter">Kontakt oss</button></a>
-                </div>
-                <div class="right-side">
-                    <img class="landing-graphic" src="assets/vector_graphics/landing_graphic.svg" alt="Landing page graphic">
+            <div id="landing-page-background-div" class="margin-top-very-large margin-bottom-massive">
+                <div id="landing-page">
+                    <div class="left-side">
+                        <h1 class="section-heading title margin-bottom-medium">Haugesund Øyelegesenter</h1>
+                        <span class="heading-accent margin-bottom-medium"></span>
+                        <h2 class="section-subheading title-subheading margin-bottom-large">Den beste behandlingen for deg med øyesykdommer.</h2>
+                        <a href="#contact-page"><button class="contact-button" aria-label="Kontakt Haugesund Øyelegesenter">Kontakt oss</button></a>
+                    </div>
+                    <img class="landing-graphic" src="assets/vector_graphics/landing_graphic_alt_seven.svg" alt="Landing page graphic">
                 </div>
             </div>
             <div id="about-page" class="full-page-background about-background-color margin-bottom-massive">
@@ -100,18 +101,10 @@
                                 those who would attempt to poison and destroy My brothers.
                                 And you will know My name is the Lord when I lay My vengeance upon thee.
                             </p>
-                            <p class="normal-text margin-bottom-none">
-                                Now that we know who you are, I know who I am.
-                                I'm not a mistake! It all makes sense!
-                                In a comic, you know how you can tell who the arch-villain's going to be?
-                                He's the exact opposite of the hero. And most times they're friends, like you and me!
-                                I should've known way back when... You know why, David? Because of the kids.
-                                They called me Mr Glass.
-                            </p>
                         </div>
                     </div>
                     <div class="right-side">
-                        <img src="assets/vector_graphics/about_graphic.svg" alt="About page graphic">
+                        <img class="about-graphic" src="assets/vector_graphics/about_graphic_alt.svg" alt="About page graphic">
                     </div>
                 </div>
             </div>
@@ -127,8 +120,8 @@
                             <p class="find-card-section-info margin-bottom-large">
                                 <a class="external-link" href="https://www.google.no/maps/place/Haraldsgata+78,+5528+Haugesund/@59.4098144,5.2709039,17z/data=!3m1!4b1!4m5!3m4!1s0x463b9fcd1b07eeeb:0x685e8523239860b3!8m2!3d59.4098144!4d5.2730926" target="_blank" rel="noopener" title="Vis Haugesund Øyelegesenter på Google Maps i ny fane">
                                     Haraldsgata 78, 5528 Haugesund
-                                    <svg class="external-link-icon padding-top-mini margin-left-mini" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-labelledby="maximilian-link-icon" role="img">
-                                        <title id="maximilian-link-icon">Vis Haugesund Øyelegesenter på Google Maps i ny fane</title>
+                                    <svg class="external-link-icon padding-top-mini margin-left-mini" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-labelledby="maps-link-icon" role="img">
+                                        <title id="maps-link-icon">Vis Haugesund Øyelegesenter på Google Maps i ny fane</title>
                                         <use href="#link-icon"></use>
                                     </svg>
                                 </a>
@@ -138,7 +131,7 @@
                         </div>
                     </div>
                     <div class="right-side">
-                        <img class="border-radius-medium img-card" src="assets/screenshots/gmaps.png" alt="Veibeskrivelse">
+                        <img class="border-radius-medium img-card normal-image" src="assets/screenshots/gmaps.png" alt="Veibeskrivelse">
                     </div>
                 </div>
             </div>
@@ -254,7 +247,7 @@
                         </div>
                     </div>
                     <div class="right-side">
-                        <img src="assets/screenshots/contact.png" alt="Contact page graphic">
+                        <img class="normal-image" src="assets/screenshots/contact.png" alt="Contact page graphic">
                     </div>
                 </div>
             </div>
